fix: address Copilot PR review comments
- Make CacheEntry a private static inner class of DiscordApiClient
- Replace .getFirst() with .get(0) for consistency
- Fix grep patterns in start.sh and stop.sh to use grep -F for literal string matching
- Fix indentation in getRarityEmoji() switch statement
- Keep colorsObj null check (required for compiler despite being logically redundant)